# sommerjobb

./: README.md
qt/DolfinGui/: CMakeCache.txt  CMakeLists.txt  ConeGeometry.cpp  ConeGeometry.h  Cube.cpp  Cube.h  CubeGeometry.cpp  CubeGeometry.h  DolfinGui.cpp  DolfinGui.h  DolfinGui.pro  DolfinGui.qrc.depends  Geometry.h  GeometryInfo.cpp  GeometryInfo.h  Makefile  PlotWidget.cpp  PlotWidget.h  Plotter.h  PlotterDecorators.h  SphereGeometry.cpp  SphereGeometry.h  UpdatePlot.py  cmake_install.cmake  dolfingui.ui  main.cpp  moc_BoundaryMeshFunction.cxx  moc_CoordLabel.cxx  moc_DolfinGui.cxx  moc_Geometry.cxx  moc_GeometryInfo.cxx  moc_PlotWidget.cxx  moc_Plotter.cxx  qrc_DolfinGui.cxx  testing.py  ui_dolfingui.h
qt/TestGui/: CMakeCache.txt  CMakeLists.txt  Makefile  TestGui  TestGui.pro  TestGui.pro.user.8dad29e  cmake_install.cmake  guiwindow.cpp  guiwindow.h  guiwindow.qrc.depends  guiwindow.ui  main.cpp  moc_guiwindow.cxx  qrc_guiwindow.cxx  ui_guiwindow.h
qt/build-DolfinGui-Desktop-Debug/: Makefile  ui_dolfingui.h
qt/build-TestGui-Desktop_Qt_5_0_2_GCC_64bit-Debug/: Makefile  TestGui  moc_guiwindow.cpp  qrc_guiwindow.cpp  ui_guiwindow.h
qt/vtk/image2d/: main.cpp
